--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
 # Created by https://www.toptal.com/developers/gitignore/api/python
 # Edit at https://www.toptal.com/developers/gitignore?templates=python
 
+### Nuitka Releases ###
+Releases/Single/
+Releases/Single_Debug/
+Releases/Normal/
+
 ### Tmp path ###
 Saved_Data/
 
