--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,13 @@
 # Created by https://www.toptal.com/developers/gitignore/api/python
 # Edit at https://www.toptal.com/developers/gitignore?templates=python
 
+
+### Release files ###
+Releases/Final_Releases
+### Advanced Installer ###
+Releases/Advanced_Install/BLE DMM Client-cache/
+Releases/Advanced_Install/BLE DMM Client-SetupFiles/
+
 ### Nuitka Releases ###
 Releases/Single/
 Releases/Single_Debug/
@@ -8,6 +15,12 @@ Releases/Normal/
 
 ### Tmp path ###
 Saved_Data/
+
+
+
+
+
+
 
 ### Python ###
 # Byte-compiled / optimized / DLL files
